Add update method
