# backend/src/main/java/com/nickmous/beanstash/controller/dto/user/request/UpdateRequest.java
@@ -1,0 +1,10 @@
+package com.nickmous.beanstash.controller.dto.user.request;
+
+import jakarta.validation.constraints.Email;
+
+public record UpdateRequest(
+    @Email String email,
+    String firstName,
+    String lastName
+) {
+}
